<resources>
    <string name="app_name">Movies And TV Show App</string>

    <string name="tab_movie">Movie</string>
    <string name="tab_tv_show">TV Show</string>
    <string name="todo">TODO</string>
    <string name="tv_title">Title</string>
    <string name="tv_date_release">Date Release</string>
    <string name="tv_description">Description</string>
    <string name="blank">.</string>
    <string name="change_language_settings">Change Language</string>

    <string name="error_fetch">Please check your internet connection</string>
</resources>
